--- a/geotrigger_app/Gemfile
+++ b/geotrigger_app/Gemfile
@@ -22,9 +22,10 @@ gem 'turbolinks'
 gem 'jbuilder', '~> 2.0'
 # bundle exec rake doc:rails generates the API under doc/api.
 gem 'sdoc', '~> 0.4.0', group: :doc
-
+# Object Geocoding, coordinates, address lookup, and reverse geocoding
+gem 'geocoder', '~> 1.2.7'
 # Use ActiveModel has_secure_password
-# gem 'bcrypt', '~> 3.1.7'
+gem 'bcrypt', '~> 3.1.7'
 
 # Use Unicorn as the app server
 # gem 'unicorn'
@@ -41,5 +42,9 @@ group :development, :test do
 
   # Spring speeds up development by keeping your application running in the background. Read more: https://github.com/rails/spring
   gem 'spring'
+  # Hide secret keys
+	gem 'dotenv-rails'
+
+  gem 'rspec-rails', '~> 3.0.0'
 end
 
