--- a/geotrigger_app/Gemfile
+++ b/geotrigger_app/Gemfile
@@ -23,7 +23,7 @@ gem 'jbuilder', '~> 2.0'
 # bundle exec rake doc:rails generates the API under doc/api.
 gem 'sdoc', '~> 0.4.0', group: :doc
 # Object Geocoding, coordinates, address lookup, and reverse geocoding
-gem 'geocoder', '~> 1.2.7'
+gem 'geocoder'
 # Use ActiveModel has_secure_password
 gem 'bcrypt', '~> 3.1.7'
 
