--- a/geotrigger_app/Gemfile
+++ b/geotrigger_app/Gemfile
@@ -26,6 +26,8 @@ gem 'sdoc', '~> 0.4.0', group: :doc
 gem 'geocoder'
 # Use ActiveModel has_secure_password
 gem 'bcrypt', '~> 3.1.7'
+# Redis for Rails
+gem 'redis-rails'
 
 # Use Unicorn as the app server
 # gem 'unicorn'
