--- a/geotrigger_app/Gemfile
+++ b/geotrigger_app/Gemfile
@@ -30,6 +30,8 @@ gem 'bcrypt', '~> 3.1.7'
 gem 'redis-rails'
 # Parse JSON data
 gem 'json', '~> 1.8.2'
+# Mapping Software
+gem 'mapbox-rails'
 
 # Use Unicorn as the app server
 # gem 'unicorn'
