--- a/geotrigger_app/Gemfile
+++ b/geotrigger_app/Gemfile
@@ -32,6 +32,8 @@ gem 'redis-rails'
 gem 'json', '~> 1.8.2'
 # Mapping Software
 gem 'mapbox-rails'
+#twitter Oauth
+gem 'twitter_oauth'
 
 # Use Unicorn as the app server
 # gem 'unicorn'
@@ -55,5 +57,6 @@ group :development, :test do
 
   gem 'ffaker'
   
+  gem 'pry-rails'
 end
 
