--- a/geotrigger_app/Gemfile
+++ b/geotrigger_app/Gemfile
@@ -54,6 +54,11 @@ group :development, :test do
 	gem 'dotenv-rails'
 
   gem 'rspec-rails', '~> 3.0.0'  
+end
+group :production do
+    gem 'pg'
+    gem 'rails_12factor'
+end
 # # <<<<<<< HEAD
   
 
