Joe & Josh Grokking code on a Friday night. User & activities populated with ffaker, map box radius integrated.

--- a/geotrigger_app/Gemfile
+++ b/geotrigger_app/Gemfile
@@ -44,7 +44,7 @@ gem 'twitter_oauth'
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
   gem 'byebug'
-
+	gem 'ffaker'
   # Access an IRB console on exception pages or by using <%= console %> in views
   gem 'web-console', '~> 2.0'
 
@@ -59,7 +59,7 @@ group :development, :test do
 
 # =======
 
-#   gem 'ffaker'
+#   
   
 #   # gem 'pry-rails'
 # >>>>>>> 33af06a5fdad6ac365c602cafa68e709b0013797
